# bing-wallpaper-robot

./: .env.example  .eslintrc.js  .gitignore  .gitpod.yml  .mcp.json  .npmrc  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  netlify.toml  ormconfig.json  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.json  vercel.json
.claude/: CLAUDE.md  settings.json
.codex/: config.toml
.theia/: launch.json
crawler/: backfill-qiniu.ts  computeColorHist.py  database.ts  dominantColor.py  getImageDominantColor.py  getImageHash.py  index.ts  makePreviewJSON.ts  pyproject.toml  ssim-compare.py
crawler/models/: index.ts
crawler/models/entities/: Analytics.ts
crawler/models/migrations/: 1775203559809-AddColorHistColumn.ts
crawler/utils/: add-or-update-wallpaper.ts  download-image.ts  download-thumbnail.ts  exec-python.ts  get-bing-wallpaper-info.ts  get-multiple-bing-wallpaper-info.ts  is-similar-image.ts  make-random-number.ts  transform-filename-to-hash-id.ts  upload-to-qiniu.ts  user-agents.ts
database/: bing-wallpaper.sqlite
docs/: CHANGELOG.md  _headers  all.js  index.html  index.js  index.json  manifest.webmanifest  note.md  offline.html  python.md  sw.js  utils.js  workbox-ba52f122.js  workbox-ea439536.js
plans/: data-collection-optimization.md
scripts/: copy-build.mjs
src/: database.ts  getImageDominantColor.py  getImageHash.py  index.ejs  index.ts  makePreviewHTML.ts  test.ts  tyorm-run-migration.ts  updateImageDominantColor.py  updateImageHash.py  updateV1ToV2.ts  uploadImagekit.ts
website/: README.md  index.html  (+5 more)
(+167 files in other folders)
